# ai-agent-ev

./: .gitignore  README.md  __init__.py  main.py  official_test.py  prompts.py  pyproject.toml  requirements.txt  state.py  supervisor.py  test.py  tools.py
agents/: __init__.py  analysis.py  base_agent.py  base_prompt.py  base_tool.py  validation.py
agents/analysis_agents/finance_agent/: agent.py  prompt.py  tool.py
agents/analysis_agents/market_agent/: agent.py  prompt.py  tool.py
agents/analysis_agents/oem_agent/: agent.py  prompt.py  tool.py
agents/analysis_agents/policy_agent/: agent.py  prompt.py  tool.py
agents/analysis_agents/supply_agent/: agent.py  prompt.py  tool.py
agents/validation_agents/: __init__.py
agents/validation_agents/cross_agent/: agent.py  prompt.py  tool.py
agents/validation_agents/hallu_agent/: agent.py  prompt.py  tool.py
print/: __init__.py  app.py  main.py
print/templates/: report.html
reports/: ev_market_report_20251023_153137.txt  ev_market_report_20251023_153600.txt  ev_market_report_20251023_153921.txt  ev_market_report_20251023_154528.txt  ev_market_report_20251023_155002.txt  ev_market_report_20251023_155530.txt
states/: __init__.py  state.py
supervisor/: __init__.py  builder.py  prompt.py  report_generator.py  workflow.py
templates/: __init__.py  cross_layer_validation.py  finance.py  hallucination_check.py  market.py  oem.py  policy.py  report_quality_check.py  supervisor.py  supply_chain.py
tools/: __init__.py  finance.py  loader.py  market.py  oem.py  policy.py  supply_chain.py  tools.py  validation.py
(+3 files in other folders)
