[project]
name = "ev-market-supervisor"
version = "0.1.0"
description = "Skeleton EV Market Intelligence Supervisor built with LangGraph"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "EV Market Intelligence Team", email = "team@example.com" }
]
dependencies = [
    "langgraph>=0.0.62",
    "langchain>=0.1",
    "pydantic>=2.0",
    "typing-extensions>=4.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
